links direct to correct section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -29,14 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-
-  <!-- =======================================================
-  * Template Name: UpConstruction
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -75,8 +66,8 @@
               <li><a href="#">FREE PSYCHOMETRIC TESTS</a></li>
             </ul>
           </li>
-          <li><a href="#">CAREER PORTAL DESIGN COMPETITION</a></li>
-          <li><a href="contact.html">cONTACT</a></li>
+          <li><a href="#careerPortal">CAREER PORTAL DESIGN COMPETITION</a></li>
+          <li><a href="">CONTACT</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -150,7 +141,7 @@
     <!-- end Of about -->
     
     <!-- ======= career portal ======= -->
-    <section id="get-started" class="get-started section-bg">
+    <section id="careerPortal" class="get-started section-bg">
       <div class="container">
 
         <div class="row justify-content-between gy-4">
