fixed contact us link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </ul>
           </li>
           <li><a href="#careerPortal">CAREER PORTAL DESIGN COMPETITION</a></li>
-          <li><a href="">CONTACT</a></li>
+          <li><a href="#">CONTACT</a></li>
         </ul>
       </nav><!-- .navbar -->
 
